Generate binding from NuttX C headers
Introduce a new kconfig module with the following changes:
* Added Cargo.toml for managing dependencies and package metadata.
* Created build.rs to generate Rust bindings from NuttX C headers.
* Added wrapper.h to include necessary NuttX headers for binding generation.
* Updated .gitignore to exclude build artifacts.

Signed-off-by: Huang Qi <huangqi3@xiaomi.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,7 @@ edition = "2024"
 
 [dependencies]
 libc = { version = "0.2", default-features = false, features = [] }
+kconfig = { path = "kconfig" }
 
-[features]
-# Enable FB overlay support (matches CONFIG_FB_OVERLAY)
-fb_overlay = []
-# Enable FB module info support (matches CONFIG_FB_MODULEINFO)
-fb_moduleinfo = []
-# Enable FB update support (matches CONFIG_FB_UPDATE)
-fb_update = []
-# Enable FB sync support (matches CONFIG_FB_SYNC)
-fb_sync = []
+[build-dependencies]
+bindgen = "0.71.1"
